--- a/mm2src/coins/Cargo.toml
+++ b/mm2src/coins/Cargo.toml
@@ -31,6 +31,7 @@ base58 = "0.2.0"
 bip32 = { version = "0.2.2", default-features = false, features = ["alloc", "secp256k1-ffi"] }
 bitcoin_hashes = "0.11"
 bitcrypto = { path = "../mm2_bitcoin/crypto" }
+blake2b_simd = "0.5.10"
 byteorder = "1.3"
 bytes = "0.4"
 cfg-if = "1.0"
