--- a/mm2src/mm2_main/Cargo.toml
+++ b/mm2src/mm2_main/Cargo.toml
@@ -128,6 +128,7 @@ mocktopus = "0.8.0"
 testcontainers = "0.15.0"
 web3 = { git = "https://github.com/KomodoPlatform/rust-web3", tag = "v0.19.0", default-features = false, features = ["http"] }
 ethabi = { version = "17.0.0" }
+url = "2.2.2"
 
 [build-dependencies]
 chrono = "0.4"
