--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -94,6 +94,7 @@ jobs:
         run: |
           rustup toolchain install nightly-2022-10-29 --no-self-update --profile=minimal
           rustup default nightly-2022-10-29
+          rustup target add x86_64-apple-darwin
 
       - name: Calculate commit hash for PR commit
         if: github.event_name == 'pull_request'
@@ -194,8 +195,9 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install toolchain
         run: |
-          rustup toolchain install nightly-2022-10-29 --no-self-update --profile=minimal
-          rustup default nightly-2022-10-29
+          rustup toolchain install nightly-2022-10-29-x86_64-apple-darwin --no-self-update --profile=minimal
+          rustup default nightly-2022-10-29-x86_64-apple-darwin
+          rustup target add x86_64-apple-darwin
 
       - name: Calculate commit hash for PR commit
         if: github.event_name == 'pull_request'
