--- a/mm2src/coins/Cargo.toml
+++ b/mm2src/coins/Cargo.toml
@@ -93,7 +93,7 @@ rlp = { version = "0.5" }
 rmp-serde = "0.14.3"
 rpc = { path = "../mm2_bitcoin/rpc" }
 rpc_task = { path = "../rpc_task" }
-satomic-swap = { git = "https://github.com/KomodoPlatform/satomic-swap.git", branch = "solana-v1.9.20", optional = true }
+satomic-swap = { git = "https://github.com/KomodoPlatform/satomic-swap.git", branch = "solana-v1.9.20-patched", optional = true }
 script = { path = "../mm2_bitcoin/script" }
 secp256k1 = { version = "0.20" }
 ser_error = { path = "../derives/ser_error" }
@@ -120,14 +120,19 @@ zcash_client_backend = { git = "https://github.com/KomodoPlatform/librustzcash.g
 zcash_extras = { git = "https://github.com/KomodoPlatform/librustzcash.git", tag = "k-1.4.1" }
 zcash_primitives =  {features = ["transparent-inputs"], git = "https://github.com/KomodoPlatform/librustzcash.git", tag = "k-1.4.1" }
 
+[patch.crates-io]
+der = { git = "https://github.com/tavakyan/formats.git", branch = "fix/downgrade-zeroize-version" }
+curve25519-dalek = { git = "https://github.com/solana-labs/curve25519-dalek.git", rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464" }
+
+
 [target.'cfg(all(not(target_os = "ios"), not(target_os = "android"), not(target_arch = "wasm32")))'.dependencies]
-bincode = { version = "1.3.3", default-features = false, optional = true }
+bincode = { vspl-associated-token-accountersion = "1.3.3", default-features = false, optional = true }
 ed25519-dalek-bip32 = { version = "0.2.0", default-features = false, optional = true }
-solana-client = { version = "1", default-features = false, optional = true }
-solana-sdk = { version = "1", default-features = false, optional = true }
+solana-client = { version = "1.18.2", default-features = false, optional = true }
+solana-sdk = { version = "1.18.2", default-features = false, optional = true }
 solana-transaction-status = { version = "1", optional = true }
-spl-token = { version = "3", optional = true }
-spl-associated-token-account = { version = "1", optional = true }
+spl-token = { version = "4.0.0", optional = true }
+spl-associated-token-account = { version = "3.0.2", optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 blake2b_simd = "0.5"
