--- a/mm2src/coins/sia/Cargo.toml
+++ b/mm2src/coins/sia/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rpc = { git = "https://github.com/KomodoPlatform/komodo-defi-framework.git", branch = "dev" }
-mm2_number = { git = "https://github.com/KomodoPlatform/komodo-defi-framework.git", branch = "dev" }
+rpc = { path = "../../mm2_bitcoin/rpc/" }
+mm2_number = { path = "../../mm2_number/" }
 ed25519-dalek = { version = "1.0.1", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
