--- a/mm2src/mm2_main/Cargo.toml
+++ b/mm2src/mm2_main/Cargo.toml
@@ -131,6 +131,8 @@ ethabi = { version = "17.0.0" }
 rlp = { version = "0.5" }
 ethcore-transaction = { git = "https://github.com/KomodoPlatform/mm2-parity-ethereum.git", rev = "mm2-v2.1.1" }
 rustc-hex = "2"
+sia = { path = "../coins/sia" }
+url = { version = "2.2.2", features = ["serde"] }
 
 [build-dependencies]
 chrono = "0.4"
