feat(solana-tests): preparing docker with test set init data
Signed-off-by: Mariusz Jasuwienas <mariusz.jasuwienas@arianelabs.com>

--- a/.docker/Dockerfile.solana-tests
+++ b/.docker/Dockerfile.solana-tests
@@ -2,7 +2,7 @@ FROM rust:1.79
 
 WORKDIR /root
 
-RUN apt -y update && apt -y install curl bzip2
+RUN apt -y update && apt -y install curl bzip2 git
 
 RUN sh -c "$(curl -sSfL https://release.solana.com/v1.17.13/install)"
 
@@ -10,6 +10,22 @@ ENV PATH="/root/.local/share/solana/install/active_release/bin:${PATH}"
 
 RUN solana-keygen new --no-bip39-passphrase
 
-COPY .docker/devnet-accounts/ /root/accounts/
+COPY ./solana-accounts/ /root/accounts/
 
-ENTRYPOINT ["solana-test-validator", "--bpf-program", "3fystoi7pB1cnDEbRRpSjFJA4fG3W2vQQZ21jSrBc11B", "/root/accounts/program1_11B.so", "--account-dir", "/root/accounts", "--reset"]
+RUN git clone https://github.com/KomodoPlatform/satomic-swap.git \
+    && cd satomic-swap \
+    && git checkout dev \
+    && cargo build-bpf \
+    && cp target/deploy/*.so /root/accounts/program.so
+
+RUN solana airdrop 1000 \
+    && solana airdrop 1000 -k /root/user1.json \
+    && solana airdrop 1000 -k /root/user2.json \
+    && solana airdrop 1000 -k /root/user3.json \
+    && solana airdrop 1000 -k /root/user4_TijN.json \
+    && solana airdrop 1000 -k /root/user5_v54e.json \
+    && solana-keygen recover /root/token_m_a.json /root/recovered-token-keypair.json \
+    && solana airdrop 1000 -k /root/recovered-token-keypair.json \
+    && solana program deploy /root/accounts/program.so
+
+ENTRYPOINT ["solana-test-validator", "--bpf-program", "3fystoi7pB1cnDEbRRpSjFJA4fG3W2vQQZ21jSrBc11B", "/root/accounts/program.so", "--account-dir", "/root/accounts", "--reset"]
