feat(solana-tests): moving to local node
Signed-off-by: Mariusz Jasuwienas <mariusz.jasuwienas@arianelabs.com>

--- a/.docker/Dockerfile.solana-tests
+++ b/.docker/Dockerfile.solana-tests
@@ -2,14 +2,23 @@ FROM rust:1.79
 
 WORKDIR /root
 
-RUN apt -y update && apt -y install curl bzip2
+RUN apt -y update && apt -y install curl bzip2 jq
 
-RUN sh -c "$(curl -sSfL https://release.solana.com/v1.17.13/install)"
+RUN sh -c "$(curl -sSfL https://release.solana.com/v1.18.20/install)"
 
 ENV PATH="/root/.local/share/solana/install/active_release/bin:${PATH}"
 
 RUN solana-keygen new --no-bip39-passphrase
 
-COPY .docker/devnet-accounts/ /root/accounts/
 
-ENTRYPOINT ["solana-test-validator", "--bpf-program", "3fystoi7pB1cnDEbRRpSjFJA4fG3W2vQQZ21jSrBc11B", "/root/accounts/program1_11B.so", "--account-dir", "/root/accounts", "--reset"]
+COPY ./solana-accounts/ /root/accounts/
+
+RUN cd /root && mv ./accounts/mint.sh mint.sh && chmod +x mint.sh && ./mint.sh
+
+RUN git clone https://github.com/KomodoPlatform/satomic-swap.git \
+    && cd satomic-swap \
+    && git checkout dev \
+    && cargo build-bpf \
+    && cp /root/satomic-swap/target/sbf-solana-solana/release/satomic_swap.so /root/accounts/program1_11B.so
+
+ENTRYPOINT ["solana-test-validator", "--bpf-program", "GCJUXKH4VeKzEtr9YgwaNWC3dJonFgsM3yMiBa64CZ8m", "/root/accounts/program1_11B.so", "--account-dir", "/root/accounts", "--reset"]
