--- a/mm2src/mm2_main/Cargo.toml
+++ b/mm2src/mm2_main/Cargo.toml
@@ -18,11 +18,11 @@ track-ctx-pointer = ["common/track-ctx-pointer"]
 zhtlc-native-tests = ["coins/zhtlc-native-tests"]
 run-docker-tests = ["coins/run-docker-tests"]
 # TODO
-enable-solana = []
+enable-solana = ["coins/enable-solana", "coins_activation/enable-solana"]
 default = []
 trezor-udp = ["crypto/trezor-udp"] # use for tests to connect to trezor emulator over udp
 run-device-tests = []
-enable-sia = []
+enable-sia = ["coins/enable-sia", "coins_activation/enable-sia"]
 
 [dependencies]
 async-std = { version = "1.5", features = ["unstable"] }
