--- a/mm2src/mm2_net/Cargo.toml
+++ b/mm2src/mm2_net/Cargo.toml
@@ -29,6 +29,8 @@ mm2-libp2p = { path = "../mm2_p2p", package = "mm2_p2p", optional = true }
 parking_lot = { version = "0.12.0", features = ["nightly"], optional = true }
 prost = "0.11"
 rand = { version = "0.7", features = ["std", "small_rng", "wasm-bindgen"] }
+ser_error = { path = "../derives/ser_error" }
+ser_error_derive = { path = "../derives/ser_error_derive" }
 serde = "1"
 serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
 thiserror = "1.0.30"
