--- a/mm2src/mm2_main/Cargo.toml
+++ b/mm2src/mm2_main/Cargo.toml
@@ -132,7 +132,8 @@ ethabi = { version = "17.0.0" }
 rlp = { version = "0.5" }
 ethcore-transaction = { git = "https://github.com/KomodoPlatform/mm2-parity-ethereum.git", rev = "mm2-v2.1.1" }
 rustc-hex = "2"
-sia-rust = { git = "https://github.com/KomodoPlatform/sia-rust", rev = "9f188b80b3213bcb604e7619275251ce08fae808" }
+# FIXME set rev= prior to merge to dev
+sia-rust = { git = "https://github.com/KomodoPlatform/sia-rust"}
 url = { version = "2.2.2", features = ["serde"] }
 
 [build-dependencies]
