--- a/mm2src/mm2_main/Cargo.toml
+++ b/mm2src/mm2_main/Cargo.toml
@@ -133,7 +133,7 @@ rlp = { version = "0.5" }
 ethcore-transaction = { git = "https://github.com/KomodoPlatform/mm2-parity-ethereum.git", rev = "mm2-v2.1.1" }
 rustc-hex = "2"
 # FIXME set rev= prior to merge to dev
-sia-rust = { git = "../coins/sia-rust/"}
+sia-rust = { path = "../coins/sia-rust/"}
 url = { version = "2.2.2", features = ["serde"] }
 
 [build-dependencies]
