fix enable-sia wasm feature

--- a/mm2src/mm2_bin_lib/Cargo.toml
+++ b/mm2src/mm2_bin_lib/Cargo.toml
@@ -20,6 +20,8 @@ custom-swap-locktime = ["mm2_main/custom-swap-locktime"] # only for testing purp
 native = ["mm2_main/native"] # Deprecated
 track-ctx-pointer = ["mm2_main/track-ctx-pointer"]
 zhtlc-native-tests = ["mm2_main/zhtlc-native-tests"]
+enable-sia = ["mm2_main/enable-sia"]
+
 
 [[bin]]
 name = "mm2"
