sia tx history, ci, wasm build

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -24,4 +24,7 @@ rustflags = [ "-Zshare-generics=y" ]
 
 [target.wasm32-unknown-unknown]
 runner = 'wasm-bindgen-test-runner'
-rustflags = [ "--cfg=web_sys_unstable_apis" ]
+rustflags = [
+    "--cfg=web_sys_unstable_apis",
+    "--cfg", "feature=\"enable-sia\""
+]
