--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "mm2src/coins/sia-rust"]
 	path = mm2src/coins/sia-rust
 	url = https://github.com/komodoplatform/sia-rust
+	branch = refactor-client
