init submodules in GH actions

--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc')
+          deps: ('protoc', 'git-submodules')
 
       - name: Calculate commit hash for PR commit
         if: github.event_name == 'pull_request'
@@ -109,7 +109,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc', 'python3', 'paramiko')
+          deps: ('protoc', 'python3', 'paramiko', 'git-submodules')
 
       - name: Calculate commit hash for PR commit
         if: github.event_name == 'pull_request'
@@ -170,7 +170,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc', 'python3', 'paramiko')
+          deps: ('protoc', 'python3', 'paramiko', 'git-submodules')
 
       - name: Calculate commit hash for PR commit
         if: github.event_name == 'pull_request'
@@ -230,7 +230,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc', 'python3', 'paramiko')
+          deps: ('protoc', 'python3', 'paramiko', 'git-submodules')
 
       - name: Calculate commit hash for PR commit
         if: github.event_name == 'pull_request'
@@ -293,7 +293,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc', 'python3', 'paramiko')
+          deps: ('protoc', 'python3', 'paramiko', 'git-submodules')
 
       - name: Calculate commit hash for PR commit
         if: github.event_name == 'pull_request'
@@ -359,7 +359,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc')
+          deps: ('protoc', 'git-submodules')
 
       - name: Install toolchain
         run: |
@@ -420,7 +420,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc', 'python3', 'paramiko')
+          deps: ('protoc', 'python3', 'paramiko', 'git-submodules')
 
       - name: Calculate commit hash for PR commit
         if: github.event_name == 'pull_request'
@@ -492,7 +492,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc')
+          deps: ('protoc', 'git-submodules')
 
       - name: Setup NDK
         run: ./scripts/ci/android-ndk.sh x86 23
@@ -569,7 +569,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc')
+          deps: ('protoc', 'git-submodules')
 
       - name: Setup NDK
         run: ./scripts/ci/android-ndk.sh x86 23
