--- a/.github/actions/deps-install/action.yml
+++ b/.github/actions/deps-install/action.yml
@@ -59,3 +59,10 @@ runs:
       if: contains(inputs.deps, 'paramiko')
       shell: bash
       run: pip install paramiko
+
+    - name: Initialize Git submodules
+      if: contains(inputs.deps, 'git-submodules')
+      shell: bash
+      run: |
+        git submodule init
+        git submodule update --recursive
