--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc', 'git-submodules')
+          deps: ('protoc', 'git-submodules', 'openssl')
 
       - name: Calculate commit hash for PR commit
         if: github.event_name == 'pull_request'
@@ -492,7 +492,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc', 'git-submodules')
+          deps: ('protoc', 'git-submodules', 'openssl')
 
       - name: Setup NDK
         run: ./scripts/ci/android-ndk.sh x86 23
@@ -569,7 +569,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc', 'git-submodules')
+          deps: ('protoc', 'git-submodules', 'openssl')
 
       - name: Setup NDK
         run: ./scripts/ci/android-ndk.sh x86 23
