--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc')
+          deps: ('protoc', 'openssl')
 
       - name: Calculate commit hash for PR commit
         if: github.event_name == 'pull_request'
@@ -449,7 +449,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc')
+          deps: ('protoc', 'openssl')
 
       - name: Setup NDK
         run: ./scripts/ci/android-ndk.sh x86 23
@@ -520,7 +520,7 @@ jobs:
       - name: Install build deps
         uses: ./.github/actions/deps-install
         with:
-          deps: ('protoc')
+          deps: ('protoc', 'openssl')
 
       - name: Setup NDK
         run: ./scripts/ci/android-ndk.sh x86 23
