--- a/.github/actions/deps-install/action.yml
+++ b/.github/actions/deps-install/action.yml
@@ -54,7 +54,7 @@ runs:
       shell: bash
       run: |
         sudo apt-get update -y
-        sudo apt-get install -y libssl-dev
+        sudo apt-get install -y pkg-config libssl-dev
 
     - name: Install python3
       uses: actions/setup-python@v5
