log and upload sha256 hash of CI builds

--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -64,6 +64,7 @@ jobs:
           zip $NAME target/release/mm2 -j
           mkdir $BRANCH_NAME
           mv $NAME ./$BRANCH_NAME/
+          shasum -a 256 ./$BRANCH_NAME/$NAME | tee ./$BRANCH_NAME/$NAME.sha256
 
       - name: Compress kdf build output
         env:
@@ -73,6 +74,7 @@ jobs:
           NAME="kdf_$COMMIT_HASH-linux-x86-64.zip"
           zip $NAME target/release/kdf -j
           mv $NAME ./$BRANCH_NAME/
+          shasum -a 256 ./$BRANCH_NAME/$NAME | tee ./$BRANCH_NAME/$NAME.sha256
 
       - name: Upload build artifact
         env:
@@ -137,6 +139,7 @@ jobs:
           zip $NAME target/x86_64-apple-darwin/release/mm2 -j
           mkdir $BRANCH_NAME
           mv $NAME ./$BRANCH_NAME/
+          shasum -a 256 ./$BRANCH_NAME/$NAME | tee ./$BRANCH_NAME/$NAME.sha256
 
       - name: Compress kdf build output
         env:
@@ -146,6 +149,7 @@ jobs:
           NAME="kdf_$COMMIT_HASH-mac-x86-64.zip"
           zip $NAME target/x86_64-apple-darwin/release/kdf -j
           mv $NAME ./$BRANCH_NAME/
+          shasum -a 256 ./$BRANCH_NAME/$NAME | tee ./$BRANCH_NAME/$NAME.sha256
 
       - name: Upload build artifact
         env:
@@ -198,6 +202,7 @@ jobs:
           zip $NAME target/aarch64-apple-darwin/release/mm2 -j
           mkdir $BRANCH_NAME
           mv $NAME ./$BRANCH_NAME/
+          shasum -a 256 ./$BRANCH_NAME/$NAME | tee ./$BRANCH_NAME/$NAME.sha256
 
       - name: Compress kdf build output
         env:
@@ -207,6 +212,7 @@ jobs:
           NAME="kdf_$COMMIT_HASH-mac-arm64.zip"
           zip $NAME target/aarch64-apple-darwin/release/kdf -j
           mv $NAME ./$BRANCH_NAME/
+          shasum -a 256 ./$BRANCH_NAME/$NAME | tee ./$BRANCH_NAME/$NAME.sha256
 
       - name: Upload build artifact
         env:
@@ -256,19 +262,43 @@ jobs:
           AVAILABLE: ${{ secrets.FILE_SERVER_KEY }}
         if: ${{ env.AVAILABLE != '' }}
         run: |
-          $NAME="mm2_$Env:COMMIT_HASH-win-x86-64.zip"
+          $NAME = "mm2_$Env:COMMIT_HASH-win-x86-64.zip"
+          
+          # Compress the mm2.exe binary and required DLLs using 7z
           7z a $NAME .\target\release\mm2.exe .\target\release\*.dll
-          mkdir $Env:BRANCH_NAME
-          mv $NAME ./$Env:BRANCH_NAME/
+      
+          # Generate the SHA256 hash for the zip file
+          Get-FileHash $NAME -Algorithm SHA256 | Format-Table Hash | Out-File "$NAME.sha256" -Encoding ascii
+      
+          # Display the SHA256 hash
+          Get-Content "$NAME.sha256"
+      
+          # Create branch directory if it doesn't exist
+          New-Item -Path $Env:BRANCH_NAME -ItemType Directory -Force
+          
+          # Move the zip file and the SHA256 file to the branch directory
+          Move-Item $NAME ./$Env:BRANCH_NAME/
+          Move-Item "$NAME.sha256" ./$Env:BRANCH_NAME/
 
       - name: Compress kdf build output
         env:
           AVAILABLE: ${{ secrets.FILE_SERVER_KEY }}
         if: ${{ env.AVAILABLE != '' }}
         run: |
-          $NAME="kdf_$Env:COMMIT_HASH-win-x86-64.zip"
+          $NAME = "kdf_$Env:COMMIT_HASH-win-x86-64.zip"
+          # Compress the kdf.exe binary and required DLLs using 7z
           7z a $NAME .\target\release\kdf.exe .\target\release\*.dll
-          mv $NAME ./$Env:BRANCH_NAME/
+      
+          # Generate the SHA256 hash for the zip file
+          Get-FileHash $NAME -Algorithm SHA256 | Format-Table Hash | Out-File "$NAME.sha256" -Encoding ascii
+      
+          # Display the SHA256 hash
+          Get-Content "$NAME.sha256"
+      
+          # Move the zip file and the SHA256 file to the branch directory
+          New-Item -Path $Env:BRANCH_NAME -ItemType Directory -Force
+          Move-Item $NAME ./$Env:BRANCH_NAME/
+          Move-Item "$NAME.sha256" ./$Env:BRANCH_NAME/
 
       - name: Upload build artifact
         env:
@@ -322,6 +352,7 @@ jobs:
           zip $NAME target/x86_64-apple-darwin/release/libmm2.a -j
           mkdir $BRANCH_NAME
           mv $NAME ./$BRANCH_NAME/
+          shasum -a 256 ./$BRANCH_NAME/$NAME | tee ./$BRANCH_NAME/$NAME.sha256
 
       - name: Compress kdf build output
         env:
@@ -332,6 +363,7 @@ jobs:
           mv target/x86_64-apple-darwin/release/libkdflib.a target/x86_64-apple-darwin/release/libkdf.a
           zip $NAME target/x86_64-apple-darwin/release/libkdf.a -j
           mv $NAME ./$BRANCH_NAME/
+          shasum -a 256 ./$BRANCH_NAME/$NAME | tee ./$BRANCH_NAME/$NAME.sha256
 
       - name: Upload build artifact
         env:
@@ -396,6 +428,7 @@ jobs:
           (cd ./target/target-wasm-release && zip -r - .) > $NAME
           mkdir $BRANCH_NAME
           mv $NAME ./$BRANCH_NAME/
+          shasum -a 256 ./$BRANCH_NAME/$NAME | tee ./$BRANCH_NAME/$NAME.sha256
 
       - name: Upload build artifact
         env:
@@ -449,6 +482,8 @@ jobs:
           zip $NAME target/aarch64-apple-ios/release/libmm2.a -j
           mkdir $BRANCH_NAME
           mv $NAME ./$BRANCH_NAME/
+          shasum -a 256 ./$BRANCH_NAME/$NAME | tee ./$BRANCH_NAME/$NAME.sha256
+
 
       - name: Compress kdf build output
         env:
@@ -459,6 +494,7 @@ jobs:
           mv target/aarch64-apple-ios/release/libkdflib.a target/aarch64-apple-ios/release/libkdf.a
           zip $NAME target/aarch64-apple-ios/release/libkdf.a -j
           mv $NAME ./$BRANCH_NAME/
+          shasum -a 256 ./$BRANCH_NAME/$NAME | tee ./$BRANCH_NAME/$NAME.sha256
 
       - name: Upload build artifact
         env:
@@ -526,6 +562,7 @@ jobs:
           zip $NAME target/aarch64-linux-android/release/libmm2.a -j
           mkdir $BRANCH_NAME
           mv $NAME ./$BRANCH_NAME/
+          shasum -a 256 ./$BRANCH_NAME/$NAME | tee ./$BRANCH_NAME/$NAME.sha256
 
       - name: Compress kdf build output
         env:
@@ -536,6 +573,7 @@ jobs:
           mv target/aarch64-linux-android/release/libkdflib.a target/aarch64-linux-android/release/libkdf.a
           zip $NAME target/aarch64-linux-android/release/libkdf.a -j
           mv $NAME ./$BRANCH_NAME/
+          shasum -a 256 ./$BRANCH_NAME/$NAME | tee ./$BRANCH_NAME/$NAME.sha256
 
       - name: Upload build artifact
         env:
@@ -603,6 +641,7 @@ jobs:
           zip $NAME target/armv7-linux-androideabi/release/libmm2.a -j
           mkdir $BRANCH_NAME
           mv $NAME ./$BRANCH_NAME/
+          shasum -a 256 ./$BRANCH_NAME/$NAME | tee ./$BRANCH_NAME/$NAME.sha256
 
       - name: Compress kdf build output
         env:
@@ -613,6 +652,7 @@ jobs:
           mv target/armv7-linux-androideabi/release/libkdflib.a target/armv7-linux-androideabi/release/libkdf.a
           zip $NAME target/armv7-linux-androideabi/release/libkdf.a -j
           mv $NAME ./$BRANCH_NAME/
+          shasum -a 256 ./$BRANCH_NAME/$NAME | tee ./$BRANCH_NAME/$NAME.sha256
 
       - name: Upload build artifact
         env:
