init, start walletconnect client impl

--- a/mm2src/mm2_main/Cargo.toml
+++ b/mm2src/mm2_main/Cargo.toml
@@ -13,7 +13,8 @@ path = "src/mm2.rs"
 doctest = false
 
 [features]
-custom-swap-locktime = [] # only for testing purposes, should never be activated on release builds.
+custom-swap-locktime = [
+] # only for testing purposes, should never be activated on release builds.
 native = [] # Deprecated
 track-ctx-pointer = ["common/track-ctx-pointer"]
 zhtlc-native-tests = ["coins/zhtlc-native-tests"]
@@ -21,7 +22,9 @@ run-docker-tests = ["coins/run-docker-tests"]
 # TODO
 enable-solana = ["coins/enable-solana", "coins_activation/enable-solana"]
 default = []
-trezor-udp = ["crypto/trezor-udp"] # use for tests to connect to trezor emulator over udp
+trezor-udp = [
+    "crypto/trezor-udp",
+] # use for tests to connect to trezor emulator over udp
 run-device-tests = []
 enable-sia = ["coins/enable-sia", "coins_activation/enable-sia"]
 
@@ -42,11 +45,17 @@ crypto = { path = "../crypto" }
 db_common = { path = "../db_common" }
 derive_more = "0.99"
 either = "1.6"
-ethereum-types = { version = "0.13", default-features = false, features = ["std", "serialize"] }
+ethereum-types = { version = "0.13", default-features = false, features = [
+    "std",
+    "serialize",
+] }
 enum_derives = { path = "../derives/enum_derives" }
 enum-primitive-derive = "0.2"
 futures01 = { version = "0.1", package = "futures" }
-futures = { version = "0.3.1", package = "futures", features = ["compat", "async-await"] }
+futures = { version = "0.3.1", package = "futures", features = [
+    "compat",
+    "async-await",
+] }
 gstuff = { version = "0.7", features = ["nightly"] }
 hash256-std-hasher = "0.15.2"
 hash-db = "0.15.2"
@@ -68,7 +77,7 @@ mm2-libp2p = { path = "../mm2_p2p", package = "mm2_p2p" }
 mm2_metrics = { path = "../mm2_metrics" }
 mm2_net = { path = "../mm2_net", features = ["event-stream", "p2p"] }
 mm2_number = { path = "../mm2_number" }
-mm2_rpc = { path = "../mm2_rpc", features = ["rpc_facilities"]}
+mm2_rpc = { path = "../mm2_rpc", features = ["rpc_facilities"] }
 mm2_state_machine = { path = "../mm2_state_machine" }
 num-traits = "0.2"
 parity-util-mem = "0.11"
@@ -93,7 +102,9 @@ ser_error_derive = { path = "../derives/ser_error_derive" }
 serialization = { path = "../mm2_bitcoin/serialization" }
 serialization_derive = { path = "../mm2_bitcoin/serialization_derive" }
 spv_validation = { path = "../mm2_bitcoin/spv_validation" }
-sp-runtime-interface = { version = "6.0.0", default-features = false, features = ["disable_target_static_assertions"] }
+sp-runtime-interface = { version = "6.0.0", default-features = false, features = [
+    "disable_target_static_assertions",
+] }
 sp-trie = { version = "6.0", default-features = false }
 trie-db = { version = "0.23.1", default-features = false }
 trie-root = "0.16.0"
@@ -127,7 +138,9 @@ coins_activation = { path = "../coins_activation", features = ["for-tests"] }
 mm2_test_helpers = { path = "../mm2_test_helpers" }
 mocktopus = "0.8.0"
 testcontainers = "0.15.0"
-web3 = { git = "https://github.com/KomodoPlatform/rust-web3", tag = "v0.20.0", default-features = false, features = ["http-rustls-tls"] }
+web3 = { git = "https://github.com/KomodoPlatform/rust-web3", tag = "v0.20.0", default-features = false, features = [
+    "http-rustls-tls",
+] }
 ethabi = { version = "17.0.0" }
 rlp = { version = "0.5" }
 ethcore-transaction = { git = "https://github.com/KomodoPlatform/mm2-parity-ethereum.git", rev = "mm2-v2.1.1" }
