--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "mm2src/derives/ser_error_derive",
     "mm2src/derives/ser_error",
     "mm2src/hw_common",
+    "mm2src/kdf_walletconnect",
     "mm2src/mm2_bin_lib",
     "mm2src/mm2_bitcoin/chain",
     "mm2src/mm2_bitcoin/crypto",
