--- a/mm2src/coins/Cargo.toml
+++ b/mm2src/coins/Cargo.toml
@@ -7,19 +7,19 @@ edition = "2018"
 zhtlc-native-tests = []
 # TODO
 enable-solana = [
-	"dep:bincode",
-	"dep:ed25519-dalek-bip32",
-	"dep:solana-client",
-	"dep:solana-sdk",
-	"dep:solana-transaction-status",
-	"dep:spl-token",
-	"dep:spl-associated-token-account",
-	"dep:satomic-swap"
+    "dep:bincode",
+    "dep:ed25519-dalek-bip32",
+    "dep:solana-client",
+    "dep:solana-sdk",
+    "dep:solana-transaction-status",
+    "dep:spl-token",
+    "dep:spl-associated-token-account",
+    "dep:satomic-swap"
 ]
 enable-sia = [
-	"dep:reqwest",
-	"dep:blake2b_simd",
-	"dep:sia-rust"
+    "dep:reqwest",
+    "dep:blake2b_simd",
+    "dep:sia-rust"
 ]
 default = []
 run-docker-tests = []
@@ -79,7 +79,7 @@ mm2_git = { path = "../mm2_git" }
 mm2_io = { path = "../mm2_io" }
 mm2_metrics = { path = "../mm2_metrics" }
 mm2_net = { path = "../mm2_net", features = ["p2p"] }
-mm2_number = { path = "../mm2_number"}
+mm2_number = { path = "../mm2_number" }
 mm2_rpc = { path = "../mm2_rpc" }
 mm2_state_machine = { path = "../mm2_state_machine" }
 mocktopus = "0.8.0"
@@ -101,7 +101,7 @@ script = { path = "../mm2_bitcoin/script" }
 secp256k1 = { version = "0.20" }
 ser_error = { path = "../derives/ser_error" }
 ser_error_derive = { path = "../derives/ser_error_derive" }
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
 serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
 serde_with = "1.14.0"
@@ -114,7 +114,7 @@ sha3 = "0.9"
 utxo_signer = { path = "utxo_signer" }
 # using the same version as cosmrs
 tendermint-rpc = { version = "0.32.0", default-features = false }
-tokio-tungstenite-wasm = { git = "https://github.com/KomodoPlatform/tokio-tungstenite-wasm", rev = "d20abdb", features = ["rustls-tls-native-roots"]}
+tokio-tungstenite-wasm = { git = "https://github.com/KomodoPlatform/tokio-tungstenite-wasm", rev = "d20abdb", features = ["rustls-tls-native-roots"] }
 url = { version = "2.2.2", features = ["serde"] }
 uuid = { version = "1.2.2", features = ["fast-rng", "serde", "v4"] }
 # One of web3 dependencies is the old `tokio-uds 0.1.7` which fails cross-compiling to ARM.
@@ -123,7 +123,7 @@ web3 = { git = "https://github.com/KomodoPlatform/rust-web3", tag = "v0.20.0", d
 zbase32 = "0.1.2"
 zcash_client_backend = { git = "https://github.com/KomodoPlatform/librustzcash.git", tag = "k-1.4.1" }
 zcash_extras = { git = "https://github.com/KomodoPlatform/librustzcash.git", tag = "k-1.4.1" }
-zcash_primitives =  {features = ["transparent-inputs"], git = "https://github.com/KomodoPlatform/librustzcash.git", tag = "k-1.4.1" }
+zcash_primitives = { features = ["transparent-inputs"], git = "https://github.com/KomodoPlatform/librustzcash.git", tag = "k-1.4.1" }
 
 [target.'cfg(all(not(target_os = "ios"), not(target_os = "android"), not(target_arch = "wasm32")))'.dependencies]
 bincode = { version = "1.3.3", default-features = false, optional = true }
