--- a/mm2src/coins/Cargo.toml
+++ b/mm2src/coins/Cargo.toml
@@ -8,7 +8,6 @@ zhtlc-native-tests = []
 # TODO
 enable-solana = [
 	"dep:bincode",
-	"dep:ed25519-dalek-bip32",
 	"dep:solana-client",
 	"dep:solana-sdk",
 	"dep:solana-transaction-status",
@@ -50,6 +49,7 @@ crypto = { path = "../crypto" }
 db_common = { path = "../db_common" }
 derive_more = "0.99"
 ed25519-dalek = { version = "1.0.1", features = ["serde"] }
+ed25519-dalek-bip32 = { version = "0.2.0", default-features = false }
 enum_derives = { path = "../derives/enum_derives" }
 ethabi = { version = "17.0.0" }
 ethcore-transaction = { git = "https://github.com/KomodoPlatform/mm2-parity-ethereum.git", rev = "mm2-v2.1.1" }
@@ -127,7 +127,6 @@ zcash_primitives =  {features = ["transparent-inputs"], git = "https://github.co
 
 [target.'cfg(all(not(target_os = "ios"), not(target_os = "android"), not(target_arch = "wasm32")))'.dependencies]
 bincode = { version = "1.3.3", default-features = false, optional = true }
-ed25519-dalek-bip32 = { version = "0.2.0", default-features = false, optional = true }
 solana-client = { version = "1", default-features = false, optional = true }
 solana-sdk = { version = "1", default-features = false, optional = true }
 solana-transaction-status = { version = "1", optional = true }
